user auth with swagger documentation
