# src/routes/authroutes.ts
@@ -1,5 +1,5 @@
 import express, { Router } from "express";
-import { forgotPassword, login, register, resetPassword, verifyEmail } from "../controllers/auth";
+import { forgotPassword, login, register, resetPassword, verifyEmail, logout } from "../controllers/auth";
 
 const AuthRoutes: Router = express.Router();
 
@@ -9,5 +9,6 @@ AuthRoutes.post("/verifyemail", verifyEmail);
 AuthRoutes.post("/login", login);
 AuthRoutes.post("/forgetpassword",forgotPassword);
 AuthRoutes.post("/resetpassword",resetPassword);
+AuthRoutes.post("/logout",logout);
 
 export default AuthRoutes;
